# zeroclaw-studio

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.e2e-tauri  README.md  README.zh-CN.md  SECURITY.md  eslint.config.js  index.html  install-git-hooks.js  lingui.config.ts  package.json  playwright.browser.config.ts  pnpm-lock.yaml  pre-commit-format.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wdio.tauri.conf.mjs
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  product-data-boundaries.md  reuse-attribution.md
scripts/: fetch-zeroclaw-sidecar.mjs  pre-commit-format.mjs  set-version.mjs  setup-dev.mjs  smoke-inner-zeroclaw.mjs  zeroclaw-sidecars.json
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/chat/: session_manager.rs  ws_proxy.rs
src-tauri/src/commands/: agent_workspace.rs  app_log.rs  chat.rs  config_summary.rs  connection.rs  fs.rs  gateway.rs  local_state.rs  mod.rs  observer.rs  runtime.rs  setup.rs  ssh.rs  task_state.rs
src-tauri/src/connection/: activator.rs  bootstrap.rs  discover.rs  mod.rs  ssh.rs  store.rs
src-tauri/src/gateway/: client.rs  health.rs  mod.rs  pair.rs
src-tauri/src/runtime/: binary.rs  installer.rs  mod.rs  ports.rs  supervisor.rs
src-tauri/src/workspace/: local_state.rs  mod.rs  task_observer.rs  task_state.rs
src-tauri/src/workspace/fs/: mod.rs  watcher.rs
src/api/: base.test.ts  base.ts  (+10 more)
(+107 files in other folders)
