[package]
name = "zeroclaw-workspace"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Desktop workspace client for ZeroClaw — connect local or remote"
publish = false

[lib]
name = "zeroclaw_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-store = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
